[gd_scene load_steps=13 format=2]

[ext_resource path="res://Media/FixedDays Font/new_dynamicfontdata.tres" type="DynamicFontData" id=1]
[ext_resource path="res://Media/FixedDays Font/Text_Default.tres" type="DynamicFont" id=2]
[ext_resource path="res://GameSrc/Universal/Scene/Bootstrap/GameInit/Submenues/Bootmode/BootMode.gd" type="Script" id=3]
[ext_resource path="res://Media/temp/temp.tres" type="StyleBox" id=4]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.236572, 0.265625, 0.236572, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.576471, 0.65098, 0.576471, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.176471, 0.239216, 0.176471, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.152941, 0.807843, 0.180392, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_color = Color( 0.282353, 0.545098, 0.235294, 1 )
shadow_size = 5

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.176471, 0.247059, 0.176471, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.160784, 0.941176, 0.0941176, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_color = Color( 0.427451, 0.639216, 0.427451, 0.6 )
shadow_size = 5

[sub_resource type="DynamicFont" id=5]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 30
outline_size = 1
outline_color = Color( 0.0156863, 0.541176, 0.0352941, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="DynamicFont" id=8]
size = 15
font_data = ExtResource( 1 )

[node name="Node" type="Node2D"]
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
margin_left = 312.0
margin_top = 168.0
margin_right = 1112.0
margin_bottom = 528.0
custom_styles/panel = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tips" type="RichTextLabel" parent="."]
margin_left = 320.0
margin_top = 176.0
margin_right = 728.0
margin_bottom = 216.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "Hover over a button get more information"
text = "Hover over a button get more information"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 48.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Loop" type="Panel" parent="Control"]
margin_left = 320.0
margin_top = 232.0
margin_right = 488.0
margin_bottom = 504.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PANIC" type="Button" parent="Control/Loop"]
margin_left = 24.0
margin_top = 112.0
margin_right = 144.0
margin_bottom = 144.0
custom_styles/hover = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.254902, 1, 0.423529, 1 )
custom_colors/font_color_hover = Color( 0.741176, 1, 0.721569, 1 )
text = "P@NIC"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="REST" type="Button" parent="Control/Loop"]
margin_left = 24.0
margin_top = 64.0
margin_right = 144.0
margin_bottom = 96.0
custom_styles/hover = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.254902, 1, 0.423529, 1 )
custom_colors/font_color_hover = Color( 0.741176, 1, 0.721569, 1 )
text = "REST"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Control/Loop"]
margin_top = 9.0
margin_right = 168.0
margin_bottom = 49.0
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "[center]Gameloop"
text = "Gameloop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Debugging" type="Panel" parent="Control"]
margin_left = 512.0
margin_top = 232.0
margin_right = 680.0
margin_bottom = 504.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TEMP" type="Button" parent="Control/Debugging"]
margin_left = 24.0
margin_top = 112.0
margin_right = 144.0
margin_bottom = 144.0
custom_styles/hover = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.254902, 1, 0.423529, 1 )
custom_colors/font_color_hover = Color( 0.741176, 1, 0.721569, 1 )
text = "TEMP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LEC-Viewer" type="Button" parent="Control/Debugging"]
visible = false
margin_left = 24.0
margin_top = 160.0
margin_right = 144.0
margin_bottom = 192.0
custom_styles/hover = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.254902, 1, 0.423529, 1 )
custom_colors/font_color_hover = Color( 0.741176, 1, 0.721569, 1 )
text = "LEC-Viewer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TILEMAP" type="Button" parent="Control/Debugging"]
margin_left = 24.0
margin_top = 64.0
margin_right = 144.0
margin_bottom = 96.0
custom_styles/hover = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.254902, 1, 0.423529, 1 )
custom_colors/font_color_hover = Color( 0.741176, 1, 0.721569, 1 )
text = "TILEMAP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Control/Debugging"]
margin_top = 9.0
margin_right = 168.0
margin_bottom = 49.0
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "[center]Debugging"
text = "Debugging"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AUTOMATION" type="Panel" parent="Control"]
margin_left = 704.0
margin_top = 232.0
margin_right = 872.0
margin_bottom = 504.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="_005_Character_Stats" type="Button" parent="Control/AUTOMATION"]
margin_left = 24.0
margin_top = 64.0
margin_right = 144.0
margin_bottom = 96.0
custom_styles/hover = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.254902, 1, 0.423529, 1 )
custom_colors/font_color_hover = Color( 0.741176, 1, 0.721569, 1 )
text = "STATISTICS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Control/AUTOMATION"]
margin_top = 9.0
margin_right = 168.0
margin_bottom = 49.0
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "[center]Automation"
text = "Automation"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="detail" type="Control" parent="."]
visible = false
margin_left = 552.0
margin_top = 56.0
margin_right = 592.0
margin_bottom = 96.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel3" type="Panel" parent="detail"]
margin_right = 424.0
margin_bottom = 88.0
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="detail"]
margin_left = -8.0
margin_right = 560.0
margin_bottom = 40.0
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[color=yellow] Details"
text = " Details"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel3" type="RichTextLabel" parent="detail"]
margin_left = 16.0
margin_top = 40.0
margin_right = 416.0
margin_bottom = 80.0
custom_fonts/normal_font = SubResource( 8 )
bbcode_enabled = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Control/Loop/PANIC" to="." method="_on_Quickstart_pressed"]
[connection signal="pressed" from="Control/Loop/REST" to="." method="_on_Restmode_pressed"]
[connection signal="pressed" from="Control/Debugging/TEMP" to="." method="_on_Experimental_pressed"]
[connection signal="pressed" from="Control/Debugging/LEC-Viewer" to="." method="_on_LEC_Viewer_pressed"]
[connection signal="pressed" from="Control/Debugging/TILEMAP" to="." method="_on_Tilemap_pressed"]
[connection signal="pressed" from="Control/AUTOMATION/_005_Character_Stats" to="." method="_on_Statistics_pressed"]
